styles.css
body {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    box-sizing: border-box;
    height: 100vh;
    gap: 2em;
    font-family: Arial, Helvetica, sans-serif;

}

.container {
    
    display: flex;
    flex-wrap: wrap;
    width: 400px;
    height: 400px;
    border: 2px solid black;
    
  
}

.container > div {
    background-color: white;
    height: var(--max-height);
    width: var(--min-width);
    border: 0.1px solid;
    box-sizing: border-box;
    border-color: hsl(240, 2%, 90%);
   
    
   
   

    
}

.header > button {
    background-color: #FEC868;
    box-shadow: none;
    border-radius: 5px;
    width: 200px;
    height: 150px;
    font-size: xx-large;
   
}


:root {
    --max-height: 9.4px;
    --min-width: 9.4px;
    --min-height: 9.4px;
    --max-width: 9.4px;
}

